src/components/sidebar/sidebar.scss
.sidebarContainer {
  width: 20%;
  margin-left: 20px;
  background-color: white;
  // TODO
  height: calc(100vh - 210px);
  margin-top: 40px;
  border-radius: 8px;

  -moz-box-shadow: 0px 1px 4px -1px rgba(0, 0, 0, 0.1);
  -webkit-box-shadow: 0px 4px 7px -1px rgba(0, 0, 0, 0.1);
  -ms-box-shadow: 0px 1px 4px -1px rgba(0, 0, 0, 0.1);
  box-shadow: 0px 1px 4px -1px rgba(0, 0, 0, 0.1);
  border: none;

  .inside {
    margin-left: 20px;

    .menu {
      margin: 20px 0;
      font-size: 24px;
      color: rgb(74, 74, 74);

      li {
        margin-bottom: 10px;
        display: flex;
        gap: 5px;
        align-items: center;
        cursor: pointer;
        padding: 5px 0 5px 5px;
        border-radius: 7px;
        transition: 0.1s;

        &:hover {
          color: #56535c;
        }
      }

      .sidebarItem {
        background-color: rgba(116, 81, 248, 0.42);
      }

      &.bottom {
        margin-top: 50px;
      }
    }

    .userPostListItem {
      height: calc((100vh - 300px)/10);
      box-sizing: border-box;
      white-space: nowrap;
      display: flex;
      align-items: center;

    }

  }



}

